--- a/setup-personalized.org
+++ b/setup-personalized.org
@@ -54,6 +54,15 @@ Create customization variables related to email.
     :group 'sf-emacs
     :type 'string)
 
+  (defcustom sf-custom/gnus-alias-alist nil
+    "An alist of alternate identities used by gnus-alias."
+    :group 'sf-emacs
+    :type 'alist)
+
+  (defcustom sf-custom/gnus-alias-identity-rules nil
+    "An alist of rules for identity selection used by gnus-alias."
+    :group 'sf-emacs
+    :type 'alist)
 #+END_SRC
 
 Create customization variables for Jabber and ERC.
