try to add sf-emacs to external customize group

--- a/setup-personalized.org
+++ b/setup-personalized.org
@@ -13,6 +13,7 @@ First create the customization group(s).
 #+BEGIN_SRC emacs-lisp
   (defgroup sf-emacs nil
     "Personalized configuration for Emacs"
+    :group 'external
     :prefix "sf-custom/")
 #+END_SRC
 
