--- a/setup-core.org
+++ b/setup-core.org
@@ -16,8 +16,8 @@ snapshots instead of 'stable' releases.
 #+BEGIN_SRC emacs-lisp
   (setq package-archives '(("org" . "http://orgmode.org/elpa/")
                             ("melpa" . "http://melpa.org/packages/")
-                            ("gnu" . "http://elpa.gnu.org/packages/")
-                            ("marmalade" . "http://marmalade-repo.org/packages/")))
+                            ("gnu" . "http://elpa.gnu.org/packages/")))
+;                            ("marmalade" . "http://marmalade-repo.org/packages/")))
   (package-initialize)
   (require 'package)
 #+END_SRC
