--- a/setup-pass.org
+++ b/setup-pass.org
@@ -246,6 +246,10 @@ The following will pull in support for Emacs.
         )
       )
     )
+  (use-package auth-password-store
+    :init
+    (progn
+      (setq auth-sources '(password-store))))
   (provide 'setup-pass)
 #+END_SRC
 
