add boxquote package

--- a/setup-core.org
+++ b/setup-core.org
@@ -380,6 +380,7 @@ Pull in information from private module, if it exists.
                         all-the-icons-dired
                         async
                         avy
+                        boxquote
                         company-jedi
                         counsel
                         dired+
